src/test/deca/syntax/invalid/self/wrong_function.deca
// Description:
//    tests de programme correct lexicalement
//
// Resultats:
//    erreur à la ligne 12 : token non reconnu
//    pas d'erreur pour le test-lex
//    test-lex -> création d'un if et d'un ident not
//
// Historique:
//    cree le 01/01/2022

{ if not }